--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="https://adhiardiansyah.github.io">Ad<span>hi</span></a></div>
+            <div class="logo"><a href="https://adhiardiansyah.xyz">Ad<span>hi</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn page-scroll">Beranda</a></li>
                 <li><a href="#about" class="menu-btn page-scroll">Tentang Saya</a></li>
@@ -269,7 +269,7 @@
 
     <!-- footer section start -->
     <footer class="footer" id="footer">
-        <span class="tulisan kiri">Created By <a href="https://adhiardiansyah.github.io">Adhi Ardiansyah</a> </span> | <span
+        <span class="tulisan kiri">Created By <a href="https://adhiardiansyah.xyz">Adhi Ardiansyah</a> </span> | <span
                 class="tulisan kanan far fa-copyright"></span> <span class="tulisan kanan">2021 All rights reserved.</span>
     </footer>
 
