--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="text">Saya Adhi, seorang <span class="typing-2"></span></div>
                     <p>Saya tertarik pada pengembangan website terutama yang berfokus pada back end. Saya juga tertarik pada pengelolaan akun media sosial. Saya sudah berpengalaman 2 tahun mengelola akun organisasi himpunan mahasiswa. Selain mengelola akun tersebut, saya juga membantu untuk membuat konten.
                         <br>
-                        Terkadang saya juga membuat filter instagram di akun instagram saya. Saya mendapatkan banyak apresiasi dari filter instagram, filter saya telah digunakan oleh beberapa selebgram hingga saya mendapatkan impresi lebih dari 40 juta impresi sekarang.</p>
+                        Terkadang saya juga membuat filter instagram di akun instagram saya. Saya mendapatkan banyak apresiasi dari filter instagram, filter saya telah digunakan oleh beberapa selebgram hingga saya mendapatkan lebih dari 40 juta impresi sekarang.</p>
                     <a href="https://adhiardiansyah.xyz/cv" target="_blank">CV Saya</a>
                 </div>
             </div>
