--- a/index.html
+++ b/index.html
@@ -180,17 +180,6 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/effect.png" alt="">
-                        <div class="text">Filter Instagram</div>
-                        <p>Kumpulan filter instagram yang sudah saya buat selama ini, serta penghargaan apa saja yang saya dapat dari filter instagram tersebut.</p>
-                        <div>
-                            <a class="kunjungi" href="https://www.facebook.com/sparkarhub/portfolios/ig/adhi_ardiansyah/"
-                            target="_blank">kunjungi</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
                         <img src="images/singosaren.png" alt="Singosaren">
                         <div class="text">Singosaren</div>
                         <p>Sebuah website e-commerce dengan menerapkan sistem shopping cart. Dibuat menggunakan PHP, JavaScript, Laravel 8, Bootstrap.</p>
@@ -201,6 +190,30 @@
                                 target="_blank">kunjungi</a>
                                 <a class="kunjungi2" title="Detail" href="https://www.linkedin.com/posts/adhiardiansyah_singosaren-e-commerce-website-activity-6837024800809082880-vQpI"
                                 target="_blank"><i class="fab fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/sebulanmenjadi.png" alt="Sebulan Menjadi">
+                        <div class="text">Sebulan Menjadi</div>
+                        <p>Salah satu program di bawah Global Millennial Group. Proses pembuatan website ini yaitu membuat Wordpress Theme.</p>
+                        <div>
+                                <a class="kunjungi" href="https://sebulanmenjadi.com"
+                                target="_blank">kunjungi</a>
+                                <a class="kunjungi2" title="Detail" href="https://www.linkedin.com/posts/adhiardiansyah_sebulan-menjadi-activity-6856083142823043072-S2_N"
+                                target="_blank"><i class="fab fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/effect.png" alt="">
+                        <div class="text">Filter Instagram</div>
+                        <p>Kumpulan filter instagram yang sudah saya buat selama ini, serta penghargaan apa saja yang saya dapat dari filter instagram tersebut.</p>
+                        <div>
+                            <a class="kunjungi" href="https://www.facebook.com/sparkarhub/portfolios/ig/adhi_ardiansyah/"
+                            target="_blank">kunjungi</a>
                         </div>
                     </div>
                 </div>
