--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Saya Adhi, seorang <span class="typing-2"></span></div>
-                    <p>Saya tertarik pada pengembangan website, banyak proyek website yang sudah saya buat. Saya juga tertarik pada pengelolaan akun media sosial. Saya sudah berpengalaman 2 tahun mengelola akun organisasi himpunan mahasiswa. Selain mengelola akun tersebut, saya juga membantu untuk membuat konten.
+                    <p>Saya tertarik pada pengembangan software, banyak proyek yang sudah saya buat. Saya juga tertarik pada pengelolaan akun media sosial. Saya sudah berpengalaman 2 tahun mengelola akun organisasi himpunan mahasiswa. Selain mengelola akun tersebut, saya juga membantu untuk membuat konten.
                         <br>
                         Terkadang saya juga membuat filter instagram di akun instagram saya. Saya mendapatkan banyak apresiasi dari filter instagram, filter saya telah digunakan oleh beberapa selebgram hingga saya mendapatkan lebih dari 40 juta impresi sekarang.</p>
                     <a href="https://adhiardiansyah.xyz/cv" target="_blank">CV Saya</a>
@@ -93,7 +93,7 @@
                 <div class="card">
                     <div class="box">
                         <i class="fa fa-globe"></i>
-                        <div class="text">Pengembangan Website</div>
+                        <div class="text">Pengembangan Software</div>
                     </div>
                 </div>
                 <div class="card">
@@ -119,7 +119,7 @@
                 <div class="column right">
                     <div class="bars">
                         <div class="info">
-                            <span>Pengembangan Website</span>
+                            <span>Pengembangan Software</span>
                             <span><i class="fa fa-globe"></i></span>
                         </div>
                         <div class="line web"></div>
