--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="text">Saya Adhi, seorang <span class="typing-2"></span></div>
                     <p>Saya tertarik pada pengembangan software, banyak proyek yang sudah saya buat. Saya juga tertarik pada pengelolaan akun media sosial. Saya sudah berpengalaman 2 tahun mengelola akun organisasi himpunan mahasiswa. Selain mengelola akun tersebut, saya juga membantu untuk membuat konten.
                         <br>
-                        Terkadang saya juga membuat filter instagram di akun instagram saya. Saya mendapatkan banyak apresiasi dari filter instagram, filter saya telah digunakan oleh beberapa selebgram hingga saya mendapatkan lebih dari 40 juta impresi sekarang.</p>
+                        Terkadang saya juga membuat filter instagram di akun instagram saya. Saya mendapatkan banyak apresiasi dari filter instagram, filter saya telah digunakan oleh beberapa selebgram hingga saya mendapatkan lebih dari 50 juta impresi sekarang.</p>
                     <a href="https://adhiardiansyah.xyz/cv" target="_blank">CV Saya</a>
                 </div>
             </div>
@@ -202,6 +202,19 @@
                                 <a class="kunjungi" href="https://sebulanmenjadi.com"
                                 target="_blank">kunjungi</a>
                                 <a class="kunjungi2" title="Detail" href="https://www.linkedin.com/posts/adhiardiansyah_sebulan-menjadi-activity-6856083142823043072-S2_N"
+                                target="_blank"><i class="fab fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/beglobal.png" alt="Be Global Indonesia">
+                        <div class="text">Be Global Indonesia</div>
+                        <p>Salah satu program di bawah Global Millennial Group. Proses pembuatan website ini yaitu membuat Wordpress Theme.</p>
+                        <div>
+                                <a class="kunjungi" href="https://beglobal.id"
+                                target="_blank">kunjungi</a>
+                                <a class="kunjungi2" title="Detail" href="https://www.linkedin.com/posts/adhiardiansyah_be-global-indonesia-activity-6875328628922707968-VXTh"
                                 target="_blank"><i class="fab fa-linkedin"></i></a>
                         </div>
                     </div>
