fix: change social media url

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="teks text-3">And I'm a/an <span class="typing"></span></div>
                 </div>
                 <div class="teks-home">
-                    <a href="https://smarturl.it/adhiardiansyah" target="_blank">Social Media</a>
+                    <a href="https://linktr.ee/adhi_ardiansyah" target="_blank">Social Media</a>
                 </div>
                 <div class="teks-home">
                     <a href="https://sociabuzz.com/adhiardiansyah/donate" target="_blank">Support Me</a>
