feat: update portfolio

--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
                             Lauretta Property Management App is a dashboard that will consume data from 1 shopping malls
                             cameras and use it to generate dashboards for property management and retail analytics.
                             <br>
-                            Role : Backend
+                            Role : Mainly backend but also helping frontend
                         </p>
                         <div>
-                            <a class="kunjungi" href="https://lauretta.io" target="_blank">Visit</a>
+                            <a class="kunjungi" href="https://demo.lauretta.solutions" target="_blank">Visit</a>
                         </div>
                     </div>
                 </div>
@@ -204,7 +204,7 @@
                             An application that aims to facilitate the management of measurement files, as an
                             alternative strategy to reduce obstacles that may occur in measurement work.
                             <br>
-                            Role : Backend
+                            Role : Mainly backend but also helping frontend
                         </p>
                         <div>
                             <a class="kunjungi" href="https://siapukur.atrbpnkaltim.net" target="_blank">Visit</a>
@@ -339,7 +339,7 @@
     <!-- footer section start -->
     <footer class="footer" id="footer">
         <span class="tulisan kiri">Created By <a href="https://adhiardiansyah.github.io">Adhi Ardiansyah</a> </span> |
-        <span class="tulisan kanan far fa-copyright"></span> <span class="tulisan kanan">2022 All rights
+        <span class="tulisan kanan far fa-copyright"></span> <span class="tulisan kanan">2023 All rights
             reserved.</span>
     </footer>
 
