--- a/index.html
+++ b/index.html
@@ -71,11 +71,7 @@
                 <div class="column right">
                     <div class="text">I'm Adhi, a/an <span class="typing-2"></span></div>
                     <p>
-                        I'm interested in software development with more than a year experience and managing social
-                        media account with two years experience.
-                        <br>
-                        Sometimes I make an Instagram filter on my Instagram account and got more than 100 million
-                        impressions till now.
+                        A software engineer with 2 years of experience working in the information technology and services industry. Graduated from Sebelas Maret University majoring in Informatics Engineering. Interested in software development.
                     </p>
                     <a href="https://adhiardiansyah.github.io/cv" target="_blank">My CV</a>
                 </div>
