feat: add hisya portfolio

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
                 <div class="column right">
                     <div class="text">I'm Adhi, a/an <span class="typing-2"></span></div>
                     <p>
-                        A software engineer with 2 years of experience working in the information technology and services industry. Graduated from Sebelas Maret University majoring in Informatics Engineering. Interested in software development.
+                        A software engineer with 2 years of experience working in the information technology and
+                        services industry. Graduated from Sebelas Maret University majoring in Informatics Engineering.
+                        Interested in software development.
                     </p>
                     <a href="https://adhiardiansyah.github.io/cv" target="_blank">My CV</a>
                 </div>
@@ -163,6 +165,20 @@
         <div class="max-width">
             <h2 class="title">Portfolio</h2>
             <div class="carousel owl-carousel">
+                <div class="card">
+                    <div class="box">
+                        <img src="images/hisya.png" alt="Hisya">
+                        <div class="text">Hisya Medical Record</div>
+                        <p>
+                            A medical record app.
+                            <br>
+                            Role : Mainly backend but also helping frontend
+                        </p>
+                        <div>
+                            <a class="kunjungi" href="https://app.hisya.id" target="_blank">Visit</a>
+                        </div>
+                    </div>
+                </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/lauretta.png" alt="Lauretta">
@@ -263,9 +279,7 @@
                         <div class="text">Instagram Filter</div>
                         <p>A collection of my Instagram filters along with the awards I have received so far.</p>
                         <div>
-                            <a class="kunjungi"
-                                href="https://www.facebook.com/sparkarhub/portfolios/ig/adhi_ardiansyah/"
-                                target="_blank">Visit</a>
+                            <a class="kunjungi" href="https://instagram.com/adhi_ardiansyah" target="_blank">Visit</a>
                         </div>
                     </div>
                 </div>
