--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="teks-home">
                     <div class="teks text-1">Hi, my name is</div>
                     <div class="teks text-2">Adhi Ardiansyah</div>
-                    <div class="teks text-3">And I'm a/an <span class="typing"></span></div>
+                    <div class="teks text-3">And I'm a <span class="typing"></span></div>
                 </div>
                 <div class="teks-home">
                     <a href="https://linktr.ee/adhi_ardiansyah" target="_blank">Social Media</a>
@@ -69,7 +69,7 @@
                     <img src="images/profile-1.jpeg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Adhi, a/an <span class="typing-2"></span></div>
+                    <div class="text">I'm Adhi, a <span class="typing"></span></div>
                     <p>
                         A software engineer with 2 years of experience working in the information technology and
                         services industry. Graduated from Sebelas Maret University majoring in Informatics Engineering.
@@ -172,7 +172,7 @@
                         <p>
                             A medical record app.
                             <br>
-                            Role : Mainly backend but also helping frontend
+                            Role : Mostly backend but also helping frontend
                         </p>
                         <div>
                             <a class="kunjungi" href="https://app.hisya.id" target="_blank">Visit</a>
@@ -187,7 +187,7 @@
                             Lauretta Property Management App is a dashboard that will consume data from 1 shopping malls
                             cameras and use it to generate dashboards for property management and retail analytics.
                             <br>
-                            Role : Mainly backend but also helping frontend
+                            Role : Mostly backend but also helping frontend
                         </p>
                         <div>
                             <a class="kunjungi" href="https://demo.lauretta.solutions" target="_blank">Visit</a>
@@ -216,7 +216,7 @@
                             An application that aims to facilitate the management of measurement files, as an
                             alternative strategy to reduce obstacles that may occur in measurement work.
                             <br>
-                            Role : Mainly backend but also helping frontend
+                            Role : Mostly backend but also helping frontend
                         </p>
                         <div>
                             <a class="kunjungi" href="https://siapukur.atrbpnkaltim.net" target="_blank">Visit</a>
@@ -230,7 +230,7 @@
                         <p>
                             E-Office app to reduce paper usage.
                             <br>
-                            Role : Mainly backend but also helping frontend
+                            Role : Mostly backend but also helping frontend
                         </p>
                         <div>
                             <a class="kunjungi" href="https://plo-btn.eoviz.com" target="_blank">Visit</a>
@@ -328,7 +328,7 @@
                                 <input type="text" class="nama" placeholder="Name" required>
                             </div>
                             <div class="right field email">
-                                <input type="email" class="emailnya" placeholder="Email" required>
+                                <input type="email" class="email" placeholder="Email" required>
                             </div>
                         </div>
                         <div class="right field">
@@ -349,7 +349,8 @@
     <!-- footer section start -->
     <footer class="footer" id="footer">
         <span class="tulisan kiri">Created By <a href="https://adhiardiansyah.github.io">Adhi Ardiansyah</a> </span> |
-        <span class="tulisan kanan far fa-copyright"></span> <span class="tulisan kanan"><span id="year"></span> All rights reserved.</span>
+        <span class="tulisan kanan far fa-copyright"></span> <span class="tulisan kanan"><span id="year"></span> All
+            rights reserved.</span>
     </footer>
 
     <script src="https://smtpjs.com/v3/smtp.js"></script>
