fix: typing text

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <img src="images/profile-1.jpeg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Adhi, a <span class="typing"></span></div>
+                    <div class="text">I'm Adhi, a <span class="typing-2"></span></div>
                     <p>
                         A software engineer with 2 years of experience working in the information technology and
                         services industry. Graduated from Sebelas Maret University majoring in Informatics Engineering.
