feat: update portfolio

--- a/index.html
+++ b/index.html
@@ -167,6 +167,20 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
+                        <img src="images/picaso.png" alt="PICASO">
+                        <div class="text">PICASO</div>
+                        <p>
+                            Inventory Control and Asset Monitor for PCS Group.
+                            <br>
+                            Role : Mostly backend but also helping frontend & devops
+                        </p>
+                        <div>
+                            <a class="kunjungi" href="https://picaso.pcsindonesia.com" target="_blank">Visit</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <img src="images/hisya.png" alt="Hisya">
                         <div class="text">Hisya Medical Record</div>
                         <p>
