fix: url aladinmall

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                             Role : Frontend
                         </p>
                         <div>
-                            <a class="kunjungi" href="https://am-adminsc.misteraladin.com" target="_blank">Visit</a>
+                            <a class="kunjungi" href="https://www.moca.aladinmall.id" target="_blank">Visit</a>
                         </div>
                     </div>
                 </div>
