adjust: role picaso

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         <p>
                             Inventory Control and Asset Monitor for PCS Group.
                             <br>
-                            Role : Mostly backend but also helping frontend & devops
+                            Role : Backend
                         </p>
                         <div>
                             <a class="kunjungi" href="https://picaso.pcsindonesia.com" target="_blank">Visit</a>
