feat: redesign web portfolio

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="text">I'm Adhi, a <span class="typing-2"></span></div>
                     <p>
                         A software engineer with 3 years of experience working in the information technology and
-                        services industry. Graduated from Sebelas Maret University majoring in Informatics Engineering.
+                        services industry. Graduated from Universitas Sebelas Maret majoring in Informatics Engineering.
                         Interested in software development.
                     </p>
                     <a href="https://adhiardiansyah.github.io/cv" target="_blank">My CV</a>
@@ -88,20 +88,20 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <i class="fab fa-instagram"></i>
-                        <div class="text">Instagram Filter Service</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
                         <i class="fa fa-globe"></i>
                         <div class="text">Software Development</div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-image"></i>
-                        <div class="text">Design</div>
+                        <i class="fas fa-icons"></i>
+                        <div class="text">Social Media Management</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-photo-video"></i>
+                        <div class="text">Content Creation</div>
                     </div>
                 </div>
             </div>
@@ -121,6 +121,13 @@
                 <div class="column right">
                     <div class="bars">
                         <div class="info">
+                            <span>Team Lead</span>
+                            <i class="fas fa-users"></i>
+                        </div>
+                        <div class="line lead"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
                             <span>Software Development</span>
                             <span><i class="fa fa-globe"></i></span>
                         </div>
@@ -128,32 +135,25 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Managing Social Media</span>
+                            <span>Database Optimization</span>
+                            <span><i class="fas fa-database"></i></span>
+                        </div>
+                        <div class="line data"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Content Creation</span>
+                            <span><i class="fas fa-photo-video"></i></span>
+                        </div>
+                        <div class="line data"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Social Media Management</span>
                             <span><i class="fas fa-heart"></i> <i class="fas fa-comment"></i> <i
                                     class="fas fa-share"></i></span>
                         </div>
                         <div class="line medsos"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Make an Instagram Filter</span>
-                            <span><i class="fab fa-instagram-square"></i></span>
-                        </div>
-                        <div class="line filter"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Design</span>
-                            <span><i class="fas fa-images"></i></span>
-                        </div>
-                        <div class="line grafis"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Database</span>
-                            <span><i class="fas fa-database"></i></span>
-                        </div>
-                        <div class="line data"></div>
                     </div>
                 </div>
             </div>
@@ -167,12 +167,10 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/picaso.png" alt="PICASO">
-                        <div class="text">PICASO</div>
+                        <img src="images/picaso.png" alt="INVERA">
+                        <div class="text">INVERA</div>
                         <p>
-                            Inventory Control and Asset Monitor for PCS Group.
-                            <br>
-                            Role : Backend
+                            Control and monitor the company's inventory and assets.
                         </p>
                         <div>
                             <a class="kunjungi" href="https://picaso.pcsindonesia.com" target="_blank">Visit</a>
@@ -185,8 +183,6 @@
                         <div class="text">TAP</div>
                         <p>
                             A platform used by sales team to submit their merchant acquisition's form.
-							<br>
-							Role : Backend
                         </p>
                         <div>
                             <a class="kunjungi" href="https://tap.pcsindonesia.com" target="_blank">Visit</a>
@@ -199,8 +195,6 @@
                         <div class="text">TAP Admin</div>
                         <p>
                             Track and monitor sales team's progress based on their form submissions.
-							<br>
-							Role : Backend
                         </p>
                         <div>
                             <a class="kunjungi" href="https://tap-wa.pcsindonesia.com" target="_blank">Visit</a>
@@ -212,9 +206,7 @@
                         <img src="images/hisya.png" alt="Hisya">
                         <div class="text">Hisya Medical Record</div>
                         <p>
-                            A medical record app.
-                            <br>
-                            Role : Mostly backend but also helping frontend
+                            A medical record application.
                         </p>
                         <div>
                             <a class="kunjungi" href="https://app.hisya.id" target="_blank">Visit</a>
@@ -228,8 +220,6 @@
                         <p>
                             Lauretta Property Management App is a dashboard that will consume data from 1 shopping malls
                             cameras and use it to generate dashboards for property management and retail analytics.
-                            <br>
-                            Role : Mostly backend but also helping frontend
                         </p>
                         <div>
                             <a class="kunjungi" href="https://demo.lauretta.solutions" target="_blank">Visit</a>
@@ -242,8 +232,6 @@
                         <div class="text">Aladin Mall Back Office & Seller Center</div>
                         <p>
                             E-Commerce application on the Admin and Seller side for Aladin Mall by Misteraladin (MNC).
-                            <br>
-                            Role : Frontend
                         </p>
                         <div>
                             <a class="kunjungi" href="https://www.moca.aladinmall.id" target="_blank">Visit</a>
@@ -257,8 +245,6 @@
                         <p>
                             An application that aims to facilitate the management of measurement files, as an
                             alternative strategy to reduce obstacles that may occur in measurement work.
-                            <br>
-                            Role : Mostly backend but also helping frontend
                         </p>
                         <div>
                             <a class="kunjungi" href="https://siapukur.atrbpnkaltim.net" target="_blank">Visit</a>
@@ -270,9 +256,7 @@
                         <img src="images/plo.png" alt="Paperless Office">
                         <div class="text">Paperless Office</div>
                         <p>
-                            E-Office app to reduce paper usage.
-                            <br>
-                            Role : Mostly backend but also helping frontend
+                            Electoric Office application to reduce paper usage.
                         </p>
                         <div>
                             <a class="kunjungi" href="https://plo-btn.eoviz.com" target="_blank">Visit</a>
@@ -289,8 +273,7 @@
                             agendas according to the courses of that department.
                         </p>
                         <div>
-                            <a class="kunjungi" href="https://sebulanmenjadi.com" target="_blank">Visit</a>
-                            <a class="kunjungi2" title="Detail"
+                            <a class="kunjungi" title="Detail"
                                 href="https://www.linkedin.com/posts/adhiardiansyah_sebulan-menjadi-activity-6856083142823043072-S2_N"
                                 target="_blank"><i class="fab fa-linkedin"></i></a>
                         </div>
@@ -308,20 +291,9 @@
                             opportunities accompanied by mentoring and agendas. self-development.
                         </p>
                         <div>
-                            <a class="kunjungi" href="https://beglobal.id" target="_blank">Visit</a>
-                            <a class="kunjungi2" title="Detail"
+                            <a class="kunjungi" title="Detail"
                                 href="https://www.linkedin.com/posts/adhiardiansyah_be-global-indonesia-activity-6875328628922707968-VXTh"
                                 target="_blank"><i class="fab fa-linkedin"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/effect.png" alt="">
-                        <div class="text">Instagram Filter</div>
-                        <p>A collection of my Instagram filters along with the awards I have received so far.</p>
-                        <div>
-                            <a class="kunjungi" href="https://instagram.com/adhi_ardiansyah" target="_blank">Visit</a>
                         </div>
                     </div>
                 </div>
