feat: update portfolio

--- a/index.html
+++ b/index.html
@@ -167,6 +167,21 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
+                        <img src="images/ky.png" alt="KerjaYuk!">
+                        <div class="text">KerjaYuk!</div>
+                        <p>
+                            KerjaYuk! is a web-based application used for employee attendance. KerjaYuk! equipped with
+                            features to make it easier for employees to submit reimbursement, overtime, permission and
+                            sickness so that, this application is expected to make it easier for HRGAF to record and
+                            report later.
+                        </p>
+                        <div>
+                            <a class="kunjungi" href="https://kerjayuk.pcsindonesia.com" target="_blank">Visit</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <img src="images/picaso.png" alt="INVERA">
                         <div class="text">INVERA</div>
                         <p>
