--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                                 <input type="text" class="nama" placeholder="Name" required>
                             </div>
                             <div class="right field email">
-                                <input type="email" class="email" placeholder="Email" required>
+                                <input type="email" id="email" class="email" placeholder="Email" required>
                             </div>
                         </div>
                         <div class="right field">
