adj: change domain invera

--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/picaso.png" alt="INVERA">
+                        <img src="images/invera.png" alt="INVERA">
                         <div class="text">INVERA</div>
                         <p>
                             Control and monitor the company's inventory and assets.
                         </p>
                         <div>
-                            <a class="kunjungi" href="https://picaso.pcsindonesia.com" target="_blank">Visit</a>
+                            <a class="kunjungi" href="https://invera.pcsindonesia.com" target="_blank">Visit</a>
                         </div>
                     </div>
                 </div>
